editor: make >>split command work all the time

Previously all ide-layout-views in the same ide-layout-stack share same
view-stack.split-down action state. This patch makes view-stack.split-down
action not having any state and whenever it is activated it toggles split
state of active view by getting and setting reverse state.

https://bugzilla.gnome.org/show_bug.cgi?id=776356